[package]
name = "leetfy"
version = "0.2.1"
edition = "2021"
description = "Leetfy your texts"
authors = ["Julio Gardona <jcbritobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jgardona/leetfy"
license = "MIT"
keywords = ["encode", "cli", "leetcode"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }


[dev-dependencies]
predicates = "3.0.3"
assert_cmd = "2.0.12"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true